day2/4.networking/1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-lab-network
  name: nginx-lab-network
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-lab-network
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-lab-network
    spec:
      containers:
      - image: nginx:1.20
        imagePullPolicy: IfNotPresent
        name: nginx
        resources:
          limits:
            memory: "100Mi"
            cpu: "100m"
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: data
        - mountPath: /usr/share/nginx/html/
          name: nginx-index-file
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: nginx-lab-network
      - name: nginx-index-file
        configMap:
          name: index-html-configmap2
          items:
            - key: index.html
              path: index.html
