day2/4.networking/2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lab-network
  labels:
    app: nginx-lab-network
spec:
  ports:
  - port: 80
    name: web
  selector:
    app: nginx-lab-network
