day2/4.networking/3-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: nginx-lab-network
  name: nginx-lab-network
spec:
  ingressClassName: nginx
  rules:
  - host: nginx-lab-network.poc.workisboring.com  ## Change nginx-lab-network to your name.
    http:
      paths:
      - backend:
          service:
            name: nginx-lab-network
            port:
              number: 80
        path: /
        pathType: Prefix
